--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "gulp-imagemin": "^2.4.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.2.0",
+    "gulp-sass": "^4.0.2",
     "gulp-uglifyjs": "^0.6.2",
+    "gulp.spritesmith": "^6.2.1",
     "imagemin-pngquant": "^4.2.2",
-    "gulp.spritesmith": "^6.2.1"
+    "node-sass": "^4.12.0"
   }
 }
